--- a/.github/workflows/frontend-admin.yml
+++ b/.github/workflows/frontend-admin.yml
@@ -4,9 +4,12 @@ on:
   push:
     branches: [ "main" ]
     tags: [ 'v*' ]
+    paths:
+      - client/admin/**
   pull_request:
     branches: [ "main" ]
-
+    paths:
+      - client/admin/**
 env:
   REGISTRY: docker.io
   TAGS: $GITHUB_REF
