--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -15,7 +15,7 @@ env:
   REGISTRY: docker.io
   TAGS: $GITHUB_REF
   COMMIT: $GITHUB_SHA
-  BE_IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house:${{env.TAGS}}_${{env.COMMIT}}
+  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house:${{env.TAGS}}_${{env.COMMIT}}
 
 jobs:
   build:
@@ -48,7 +48,7 @@ jobs:
         with:
           context: ./server
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.TAGS }}
+          tags: ${{ env.IMAGE_NAME }}
           labels: commit=${{ env.COMMIT }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
