--- a/.github/workflows/frontend-admin.yml
+++ b/.github/workflows/frontend-admin.yml
@@ -12,9 +12,7 @@ on:
       - client/admin/**
 env:
   REGISTRY: docker.io
-  TAGS: $GITHUB_REF
-  COMMIT: $GITHUB_SHA
-  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house-fe_admin:${{env.TAGS}}_${{env.COMMIT}}
+  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house-fe_admin:${{ github.ref_name }}_${{ github.sha }} 
 
 jobs:
   build:
@@ -48,7 +46,7 @@ jobs:
           context: ./client/admin
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.IMAGE_NAME }}
-          labels: commit=${{ env.COMMIT }}
+          labels: commit=${{ github.sha }} 
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
