--- a/.github/workflows/frontend-admin.yml
+++ b/.github/workflows/frontend-admin.yml
@@ -12,7 +12,7 @@ on:
       - client/admin/**
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house-fe_admin:${{ github.ref_name }}_${{ github.sha }} 
+  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house-fe_admin:${{ github.ref_name }} 
 
 jobs:
   build:
