--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   REGISTRY: docker.io
-  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house:${{ github.ref_name }}_${{ github.sha }} 
+  IMAGE_NAME: ${{ secrets.DOCKER_USER }}/the-coffee-house:${{ github.ref_name }} 
 
 jobs:
   build:
