--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -49,8 +49,7 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ env.IMAGE_NAME }}
           labels: commit=${{ github.sha }} 
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
+          cache-from: ''
+          cache-to: '' 
   
   
