--- a/.github/workflows/bump.yml
+++ b/.github/workflows/bump.yml
@@ -14,5 +14,5 @@ jobs:
     - name: Bump version and push tag
       uses: anothrNick/github-tag-action@v1 
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+        GITHUB_TOKEN: ${{ secrets.PAT }} 
         WITH_V: true
