--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.674.0",
+    "@aws-sdk/lib-storage": "^3.674.0",
+    "aws-sdk": "^2.1691.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7"
   }
 }
